[package]
# Do not change the name of this crate.
name = "hub"
version = "0.1.0"
edition = "2021"

[lib]
# `lib` is required for non-library targets,
# such as tests and benchmarks.
# `cdylib` is for Linux, Android, Windows, and web.
# `staticlib` is for iOS and macOS.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
rinf = "6.15.0"
prost = "0.13"
chrono = "0.4.38"
arc-swap = "1.7.1"
serde = { version = "1.0.210", features = ["derive"] }
csv = "1.3.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["sync", "rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio_with_wasm = { version = "0.6.1", features = ["sync", "rt"] }
wasm-bindgen = "0.2.92"
# Uncomment below to target the web.
# tokio_with_wasm = { version = "0.6.0", features = ["sync", "rt"] }
# wasm-bindgen = "0.2.92"


[profile.release]
inherits = "release"
opt-level = 'z'
strip = 'all'
lto = true
codegen-units = 1
